# backend/openapi.yaml
@@ -3,21 +3,160 @@
 
 openapi: 3.0.3
 info:
-    title: Tracker API
-    description: The tracker service definition.
+    title: Chat API
+    description: The chat service definition.
     version: 0.0.1
 paths:
-    /tracker/batch:
-        post:
+    /chat/history:
+        get:
             tags:
-                - Tracker
-            description: Batch 批量新增埋点数据
-            operationId: Tracker_Batch
+                - Chat
+            description: History
+            operationId: Chat_History
+            parameters:
+                - name: sessionId
+                  in: query
+                  schema:
+                    type: string
+                - name: name
+                  in: query
+                  schema:
+                    type: string
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/HistoryReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /chat/history/{sessionId}:
+        get:
+            tags:
+                - Chat
+            description: history by id
+            operationId: Chat_HistoryById
+            parameters:
+                - name: sessionId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: name
+                  in: query
+                  schema:
+                    type: string
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/MessagesReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        put:
+            tags:
+                - Chat
+            description: history rename by id
+            operationId: Chat_HistoryRenameById
+            parameters:
+                - name: sessionId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/BatchRequest'
+                            $ref: '#/components/schemas/HistoryRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content: {}
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        delete:
+            tags:
+                - Chat
+            description: delete history by id
+            operationId: Chat_HistoryDeleteById
+            parameters:
+                - name: sessionId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: name
+                  in: query
+                  schema:
+                    type: string
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content: {}
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /chat/send:
+        post:
+            tags:
+                - Chat
+            description: Stream chat messages for real-time communication
+            operationId: Chat_SendStream
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/SendStreamRequest'
                 required: true
             responses:
                 "200":
@@ -25,74 +164,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/BatchReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /tracker/list:
-        get:
-            tags:
-                - Tracker
-            description: List 分页查询埋点数据
-            operationId: Tracker_List
-            parameters:
-                - name: pageNum
-                  in: query
-                  description: 页码
-                  schema:
-                    type: integer
-                    format: int32
-                - name: pageSize
-                  in: query
-                  description: 每页数量
-                  schema:
-                    type: integer
-                    format: int32
-                - name: appId
-                  in: query
-                  description: 应用ID
-                  schema:
-                    type: string
-                - name: deviceId
-                  in: query
-                  description: 设备ID
-                  schema:
-                    type: string
-                - name: userId
-                  in: query
-                  description: 用户ID
-                  schema:
-                    type: string
-                - name: type
-                  in: query
-                  description: 类型
-                  schema:
-                    type: string
-                - name: pageUrl
-                  in: query
-                  description: 页面URL
-                  schema:
-                    type: string
-                - name: startTime
-                  in: query
-                  description: 开始时间
-                  schema:
-                    type: string
-                - name: endTime
-                  in: query
-                  description: 结束时间
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/ListReply'
+                                $ref: '#/components/schemas/SendStreamReply'
                 default:
                     description: Default error response
                     content:
@@ -101,27 +173,54 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        BatchReply:
+        AIModel:
             type: object
             properties:
-                successCount:
-                    type: integer
-                    description: 成功数量
-                    format: int32
-                failedCount:
-                    type: integer
-                    description: 失败数量
-                    format: int32
-            description: BatchReply 批量新增响应
-        BatchRequest:
+                id:
+                    type: string
+                modelName:
+                    type: string
+                thinkingMode:
+                    type: string
+            description: |-
+                export interface AIModel {
+                     id: string;
+                     modelName: string;
+                     thinkingMode: 'smart' | 'deep' | 'quick'; // 思考类型，深度思考，快速思考，智能思考。
+                 }
+        Attachment:
             type: object
             properties:
-                logs:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/TrackerMessage'
-                    description: 埋点数据列表
-            description: BatchRequest 批量新增请求
+                id:
+                    type: string
+                type:
+                    type: string
+                name:
+                    type: string
+                url:
+                    type: string
+            description: |-
+                export interface Attachment {
+                     id: string;
+                     type: 'image' | 'file';
+                     name: string;
+                     url?: string;
+                 }
+        CallingTool:
+            type: object
+            properties:
+                name:
+                    type: string
+                description:
+                    type: string
+                functionName:
+                    type: string
+            description: |-
+                export interface CallingTool {
+                     name: string;
+                     description: string;
+                     functionName: string;
+                 }
         GoogleProtobufAny:
             type: object
             properties:
@@ -130,19 +229,129 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        ListReply:
+        HistoryReply:
             type: object
             properties:
-                list:
+                messages:
                     type: array
                     items:
-                        $ref: '#/components/schemas/TrackerMessage'
-                    description: 埋点数据列表
+                        type: string
                 total:
                     type: integer
-                    description: 总数量
                     format: int32
-            description: ListReply 分页查询响应
+            description: Reply for history
+        HistoryRequest:
+            type: object
+            properties:
+                sessionId:
+                    type: string
+                name:
+                    type: string
+                page:
+                    type: integer
+                    format: int32
+                pageSize:
+                    type: integer
+                    format: int32
+            description: history
+        Message:
+            type: object
+            properties:
+                id:
+                    type: string
+                role:
+                    type: string
+                aiModel:
+                    $ref: '#/components/schemas/AIModel'
+                content:
+                    type: string
+                reasoningContent:
+                    type: string
+                timestamp:
+                    type: string
+                quoteId:
+                    type: string
+                quoteContent:
+                    type: string
+                quoteSearchLinks:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/QuoteSearchLink'
+                tokenUsage:
+                    $ref: '#/components/schemas/TokenUsage'
+                callingTools:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/CallingTool'
+                attachments:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Attachment'
+            description: |-
+                export interface Message {
+                     id: string;
+                     role: 'user' | 'assistant' | 'human'; // 用户，ai，人工客服
+                     aiModel?: AIModel; // 选择的AI模型。
+                     content: string;
+                     reasoning_content?: string; // 深度思考内容。
+                     timestamp: number; // 消息发送时间。
+                     quoteId?: string; // 引用消息ID。
+                     quoteContent?: string; // 引用消息内容。
+                     quoteSearchLinks?: QuoteSearchLink[]; // 联网搜索引用文章链接和内容。
+                     tokenUsage?: { // token消耗累计。
+                         currentTokens: number; // 当前消耗
+                         totalTokens: number; // 累计消耗
+                     };
+                     callingTools?: CallingTool[]; // agent工具调用情况。
+                     attachments?: Attachment[]; // 生成或者发送的附件/图片。
+                 }
+        MessagesReply:
+            type: object
+            properties:
+                messages:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Message'
+                total:
+                    type: integer
+                    format: int32
+        QuoteSearchLink:
+            type: object
+            properties:
+                url:
+                    type: string
+                title:
+                    type: string
+                content:
+                    type: string
+                highlight:
+                    type: array
+                    items:
+                        type: string
+            description: |-
+                export interface QuoteSearchLink {
+                     url: string;
+                     title: string;
+                     content: string;
+                     highlight: string[];
+                 }
+        SendStreamReply:
+            type: object
+            properties:
+                message:
+                    $ref: '#/components/schemas/Message'
+        SendStreamRequest:
+            type: object
+            properties:
+                message:
+                    $ref: '#/components/schemas/Message'
+                history:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Message'
+                needTODOPlan:
+                    type: string
+            description: Request for sending a message
         Status:
             type: object
             properties:
@@ -159,33 +368,12 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        TrackerMessage:
+        TokenUsage:
             type: object
             properties:
-                appId:
+                currentTokens:
                     type: string
-                    description: 应用ID
-                deviceId:
+                totalTokens:
                     type: string
-                    description: 设备ID
-                userId:
-                    type: string
-                    description: 用户ID
-                timestamp:
-                    type: string
-                    description: 时间戳
-                userAgent:
-                    type: string
-                    description: 用户代理
-                pageUrl:
-                    type: string
-                    description: 页面URL
-                type:
-                    type: string
-                    description: 类型
-                data:
-                    type: string
-                    description: 数据
-            description: Tracker 埋点数据消息
 tags:
-    - name: Tracker
+    - name: Chat
